<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.covidtracking2.FragmentEval0">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="411dp"
                android:layout_height="154dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="263dp"
                android:layout_height="231dp"
                android:layout_marginBottom="15dp"
                android:gravity="center|center_horizontal"
                android:text="@string/TextView1_String"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="297dp"
                android:layout_height="513dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"

                android:text="@string/TextView_String"
                android:textSize="18sp" />


            <Button
                android:id="@+id/axcse0"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_cel"
                android:gravity="center"
                android:text="@string/Buttun2_String"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>