<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.covidtracking2.informacionSintoma">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3C3838"
        tools:context=".prevencion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="758dp"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewsint"
                android:layout_width="344dp"
                android:layout_height="61dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/texttViewSint_String"
                android:textColor="#FF9800"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="312dp"
                android:layout_height="52dp"
                android:text="los Sintomas varian segun el tipo de persona."
                android:textColor="#FFFFFF" />

            <ScrollView
                android:layout_width="346dp"
                android:layout_height="562dp"
                android:layout_gravity="center">


                <TableLayout
                    android:id="@+id/stri"
                    android:layout_width="350dp"
                    android:layout_height="385dp"
                    android:background="#FF9800"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="349dp"
                        android:layout_height="269dp"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imgv2t"
                            android:layout_width="171dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/cabeza"

                            />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="124dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo1_String" />


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imgv3t"
                            android:layout_width="171dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/ttos"

                            />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo2_String"
                            android:textSize="12sp" />

                    </TableRow>


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imgv4"
                            android:layout_width="171dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/garganta"

                            />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewSint3_String" />

                    </TableRow>


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imgv5"
                            android:layout_width="171dp"
                            android:layout_height="160dp"
                            android:background="@drawable/respirar" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo4_String" />


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView45"
                            android:layout_width="171dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/nasal" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo5_String" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView23"
                            android:layout_width="171dp"
                            android:layout_height="183dp"
                            android:background="@drawable/fatiga" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo6_String"
                            android:textSize="12sp" />


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="171dp"
                            android:layout_height="183dp"
                            android:background="@drawable/fiedre" />

                        <TextView
                            android:id="@+id/textView27"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo7_String"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView19"
                            android:layout_width="171dp"
                            android:layout_height="183dp"
                            android:background="@drawable/diare" />

                        <TextView
                            android:id="@+id/textView28"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo8_String"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView20"
                            android:layout_width="171dp"
                            android:layout_height="183dp"
                            android:background="@drawable/sentido" />

                        <TextView
                            android:id="@+id/textView29"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo9_String" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageView21"
                            android:layout_width="171dp"
                            android:layout_height="183dp"
                            android:background="@drawable/musc" />

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:gravity="center"
                            android:text="@string/texttViewinfo10_String"
                            android:textSize="12sp" />

                    </TableRow>


                </TableLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_cel"
                    android:text="Nutrición" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>